# picoADC_UDP

./: .gitignore  CMakeLists.txt  README.md  adcReader.c  fifoBlock.c  fifoBlock.h  picoADC_UDP.c  picoADC_UDP.h
picoADC_SDCARD/: .hw_config.old.c.swp  CMakeLists.txt  fifoBlock.c  fifoBlock.h  hw_config.c  picoADC_SDCARD.c  picoADC_SDCARD.h  pico_ntp.h
picoADC_SDCARD_SDIO/: CMakeLists.txt  Makefile  adcReader.c  ds3231.h  fifoBlock.h  picoADC_SDCARD.c  picoADC_SDCARD.h  pico_ntp.c
picoADC_SDCARD_SDIO_NOT_WORKING/: ds3231.c  picoADC_SDCARD.h
picoADC_UDP/: CMakeLists.txt  picoADC_UDP.c  picoADC_UDP.h
picoADC_USB/: CMakeLists.txt  fifoBlock.c  fifoBlock.h  picoADC_USB.c  usb2bin.c  usbtodisk.py
picoADC_USB_STICK/: CMakeLists.txt  glue.c  pic_storage.h  usb_msc.c  usb_msc.h
